@@ -10,17 +10,12 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import reactor.core.publisher.Mono;
-import reactor.core.scheduler.Schedulers;
 import ru.abdusamatov.librarywithsecurity.dto.UserDto;
 import ru.abdusamatov.librarywithsecurity.exception.ResourceNotFoundException;
 import ru.abdusamatov.librarywithsecurity.repository.UserRepository;
-import ru.abdusamatov.librarywithsecurity.service.mapper.DocumentMapper;
 import ru.abdusamatov.librarywithsecurity.service.mapper.UserMapper;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -28,77 +23,57 @@ import java.util.stream.Collectors;
 @CacheConfig(cacheNames = "user")
 public class UserService {
     private final UserRepository userRepository;
-    private final UserMapper mapper;
-    private final DocumentMapper documentMapper;
+    private final UserMapper userMapper;
 
     @Transactional(readOnly = true)
-    public Mono<List<UserDto>> getUserList(final Integer page, final Integer size) {
-        return Mono.fromCallable(() ->
-                        userRepository.findAll(PageRequest.of(page, size, Sort.by("id").ascending())))
-                .subscribeOn(Schedulers.boundedElastic())
-                .flatMap(pageResult -> {
-                    if (pageResult.hasContent()) {
-                        return Mono.just(pageResult.getContent()
-                                .stream()
-                                .map(mapper::userToDto)
-                                .collect(Collectors.toList()));
-                    } else {
-                        return Mono.just(Collections.emptyList());
-                    }
-                });
+    public List<UserDto> getUserList(final Integer page, final Integer size) {
+        return userRepository
+                .findAll(PageRequest.of(page, size, Sort.by("id").ascending()))
+                .getContent()
+                .stream()
+                .map(userMapper::userToDto)
+                .toList();
     }
-
 
     @Cacheable(key = "#id")
     @Transactional(readOnly = true)
-    public Mono<UserDto> getUserById(final Long id) {
-        return Mono.fromCallable(() ->
-                        userRepository.findById(id)
-                                .map(mapper::userToDto)
-                                .orElseThrow(() -> new ResourceNotFoundException("User", "ID", id)))
-                .subscribeOn(Schedulers.boundedElastic());
+    public UserDto getUserById(final Long id) {
+        return userRepository.findById(id)
+                .map(userMapper::userToDto)
+                .orElseThrow(() -> new ResourceNotFoundException("User", "ID", id));
     }
 
     @Transactional
-    public Mono<UserDto> createUser(final UserDto dto) {
-        final var document = documentMapper.dtoToDocument(dto.getDocumentDto());
-        final var user = mapper.dtoToUser(dto);
-        user.setDocument(document);
+    public UserDto createUser(final UserDto dto) {
+        final var createdUser = userRepository.save(userMapper.dtoToUser(dto));
 
-        return Mono.fromCallable(() -> userRepository.save(user))
-                .subscribeOn(Schedulers.boundedElastic())
-                .map(mapper::userToDto)
-                .doOnSuccess(savedUser -> log.info("Saving new User with ID: {}", savedUser.getId()));
+        log.info("Saving new User with ID: {}", createdUser.getId());
+        return userMapper.userToDto(createdUser);
     }
 
     @CachePut(key = "#dtoToBeUpdated.id")
     @Transactional
-    public Mono<UserDto> updateUser(final UserDto dtoToBeUpdated) {
-        return Mono.fromCallable(() ->
-                        userRepository
-                                .findById(dtoToBeUpdated.getId())
-                                .orElseThrow(() -> new ResourceNotFoundException("User", "ID", dtoToBeUpdated.getId())))
-                .subscribeOn(Schedulers.boundedElastic())
-                .flatMap(user -> {
-                    final var updatedUserEntity = mapper.updateUserFromDto(dtoToBeUpdated, user);
-                    return Mono.fromCallable(() -> userRepository.save(updatedUserEntity))
-                            .subscribeOn(Schedulers.boundedElastic());
+    public UserDto updateUser(final UserDto dtoToBeUpdated) {
+        final var updatedUser = userRepository.findById(dtoToBeUpdated.getId())
+                .map(user -> {
+                    final var updatedUserEntity = userMapper.updateUserFromDto(dtoToBeUpdated, user);
+
+                    return userRepository.save(updatedUserEntity);
                 })
-                .map(mapper::userToDto)
-                .doOnSuccess(userDto -> log.info("Updated user with ID: {}", userDto.getId()));
+                .map(userMapper::userToDto)
+                .orElseThrow(() -> new ResourceNotFoundException("User", "ID", dtoToBeUpdated.getId()));
+
+        log.info("Updated user with ID: {}", dtoToBeUpdated.getId());
+        return updatedUser;
     }
 
     @CacheEvict(key = "#id")
     @Transactional
-    public Mono<Void> deleteUserById(final Long id) {
-        return Mono.fromCallable(() ->
-                        userRepository.findById(id))
-                .subscribeOn(Schedulers.boundedElastic())
-                .flatMap(optionalUser -> optionalUser
-                        .map(user -> Mono.fromRunnable(() -> userRepository.delete(user))
-                                .subscribeOn(Schedulers.boundedElastic()))
-                        .orElseGet(() -> Mono.error(new ResourceNotFoundException("User", "ID", id))))
-                .doOnSuccess(aVoid -> log.info("Deleted user with ID: {}", id))
-                .then();
+    public void deleteUserById(final Long id) {
+        final var user = userRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("User", "ID", id));
+
+        userRepository.delete(user);
+        log.info("Deleted user with ID: {}", id);
     }
 }
